# tcc-jplm

./: .clang-format  .gitignore  .gitlab-ci.yml  CMakeLists.txt  CMakeLists.txt.in.openjpeg  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE.md  NOTICES.md  README.md  dock
source/App/Decoder/TemporaryTransformMode/: CMakeLists.txt  MuleDecoder.cpp  MuleDecoder.h  decoder.cpp
source/App/Encoder/TemporaryTransformMode/: CMakeLists.txt  MuleEncoder.cpp  MuleEncoder.h  encoder.cpp
source/App/Utils/: CMakeLists.txt  ComputeLightFieldPSNR.cpp  ComputeLightFieldPSNRFromPPM.cpp  ComputeLightFieldQualityMetrics.cpp  ComputePSNR.cpp  Lenslet13x13Shifter.cpp  LightFieldViewCoordinateChange.cpp  LightfieldVisualization.cpp  PGXToPPM.cpp  PPMToPGX.cpp
source/Lib/Common/: CLIArgument.h  CLIOption.cpp  CLIOption.h  CMakeLists.txt  CommonExceptions.cpp  CommonExceptions.h  Configuration.h  ConfigurationFactory.h  ConfigurationParser.h  JPLMCodecFactory.cpp  JPLMCodecFactory.h  JPLMConfiguration.cpp  JPLMConfiguration.h  JPLMConfigurationExceptions.cpp  JPLMConfigurationExceptions.h  JPLMConfigurationFactory.cpp  JPLMConfigurationFactory.h  JPLMDecoderConfiguration.cpp  JPLMDecoderConfiguration.h  JPLMEncoderConfiguration.cpp  JPLMEncoderConfiguration.h  JPLMEncoderConfigurationLightField.cpp  JPLMEncoderConfigurationLightField.h  JPLMEncoderConfigurationLightField4DPredictionMode.cpp  JPLMEncoderConfigurationLightField4DPredictionMode.h  JPLMEncoderConfigurationLightField4DTransformMode.cpp  JPLMEncoderConfigurationLightField4DTransformMode.h  JpegPlenoCodec.h  ParseExceptions.h  ParsedConfiguration.cpp  ParsedConfiguration.h
source/Lib/Common/Boxes/: Box.cpp  Box.h  BoxDataHolder.cpp  BoxDataHolder.h  BoxParser.cpp  BoxParser.h  BoxParserRegistry.cpp  BoxParserRegistry.h  BoxRegistry.cpp  BoxRegistry.h  BoxToParserRegistry.h  CMakeLists.txt  DBox.cpp  DBox.h  DBoxContents.h  EmptyDBox.cpp  EmptyDBox.h  EmptyDBoxContents.h  GenericBox.cpp  GenericBox.h  InFileDBox.cpp  InFileDBox.h  InFileDBoxContents.cpp  InFileDBoxContents.h  InMemoryDBox.cpp  InMemoryDBox.h  InMemoryDBoxContents.h  JpegPlenoSignatureBoxParser.h  LBox.cpp  LBox.h  SuperBoxDBox.cpp  SuperBoxDBox.h  SuperBoxDBoxContents.h  TBox.cpp  TBox.h  XLBox.cpp  XLBox.h  test.cpp
source/Lib/Part2/Common/: CMakeLists.txt  CommonExceptions.cpp  CommonExceptions.h  JPLMLightFieldCodec.cpp  JPLMLightFieldCodec.h  JpegPlenoLightFieldCodec.h  Lightfield.cpp  Lightfield.h  LightfieldCoordinate.cpp  LightfieldCoordinate.h  LightfieldDimension.cpp  LightfieldDimension.h  LightfieldFromFile.cpp  LightfieldFromFile.h  LightfieldFromPPMFile.h  LightfieldIO.cpp  LightfieldIO.h  LightfieldIOConfiguration.cpp  LightfieldIOConfiguration.h  PGX3CharViewToFilename.cpp  PGX3CharViewToFilename.h  PPM3CharViewToFilename.cpp  PPM3CharViewToFilename.h  View.cpp  View.h  ViewFromPGXFile.cpp  ViewFromPGXFile.h  ViewFromPPMFile.h  ViewIOPolicies.cpp  ViewIOPolicies.h  ViewIOPolicy.cpp  ViewIOPolicy.h  ViewIOPolicyLimitedMemory.cpp  ViewIOPolicyLimitedMemory.h  ViewIOPolicyLimitedNumberOfViews.cpp  ViewIOPolicyLimitedNumberOfViews.h  ViewIOPolicyLimitlessMemory.cpp  ViewIOPolicyLimitlessMemory.h  ViewIOPolicyOneAtATime.cpp  ViewIOPolicyOneAtATime.h  (+4 more)
source/Lib/Utils/Image/: CMakeLists.txt  ColorModelUtils.cpp  ColorModelUtils.h  ColorSpaces.cpp  ColorSpaces.h  Generic2DIterator.cpp  Generic2DIterator.h  Generic2DStructure.cpp  Generic2DStructure.h  Image.h  ImageChannel.cpp  ImageChannel.h  ImageChannelUtils.cpp  ImageChannelUtils.h  ImageColorSpacesConversor.cpp  ImageColorSpacesConversor.h  ImageExceptions.cpp  ImageExceptions.h  ImageFile.cpp  ImageFile.h  ImageIO.cpp  ImageIO.h  ImageMetrics.cpp  ImageMetrics.h  ImageUtils.cpp  ImageUtils.h  Metrics.cpp  Metrics.h  PGXFile.cpp  PGXFile.h  PGXFileIO.cpp  PGXFileIO.h  PPMBinaryFile.cpp  PPMBinaryFile.h  PixelMapFile.cpp  PixelMapFile.h  PixelMapFileBinary.cpp  PixelMapFileBinary.h  PixelMapFileIO.cpp  PixelMapFileIO.h  (+14 more)
source/Tests/Common/: CMakeLists.txt  ConfigurationParserTests.cpp  JPLFileIOTests.cpp  JPLMCodecFactoryTests.cpp  JPLMConfigurationFactoryTests.cpp  JPLMConfigurationTests.cpp  JPLMEncoderConfigurationTests.cpp
source/Tests/Common/Boxes/: BoxDataHolderTests.cpp  BoxTests.cpp  CMakeLists.txt  DBoxTests.cpp  LBoxTests.cpp  TBoxTests.cpp  XLBoxTests.cpp
source/Tests/Part1/Common/: BinaryToolsTests.cpp  BoxDataHolderTests.cpp  BoxTests.cpp  CMakeLists.txt  DBoxTests.cpp  FileTypeBoxTests.cpp  ImageHeaderBoxTests.cpp  ImageHeaderContentsTests.cpp  JPLFileTests.cpp  JpegPlenoFileTypeContentsTests.cpp  JpegPlenoHeaderBoxTests.cpp  JpegPlenoSignatureBoxTests.cpp  LBoxTests.cpp  TBoxTests.cpp  UUIDBoxTests.cpp  UniversalUniqueIdentifierTests.cpp  UnkownBoxInterpreterTests.cpp  XLBoxTests.cpp
source/Tests/Part1/Decoder/: CMakeLists.txt  FileTypeBoxParserTests.cpp  JPLFileFromStreamTests.cpp  JpegPlenoSignatureBoxParserTests.cpp
source/Tests/Part1/Encoder/: CMakeLists.txt  JPLFileTests.cpp
source/Tests/Part2/Common/: CMakeLists.txt  JPLFileTests.cpp  LightfieldCoordinateTests.cpp  LightfieldDimensionTests.cpp  LightfieldFromFileTests.cpp  LightfieldFromPPMFileTests.cpp  LightfieldIOConfigurationTests.cpp  LightfieldTests.cpp  PGX3CharViewToFilenameTranslatorTests.cpp  PPM3CharViewToFilenameTranslatorTests.cpp  ViewFromPPMFileTests.cpp  ViewTests.cpp  ViewToFilenameTranslatorTests.cpp
source/Tests/Part2/Decoder/: CMakeLists.txt  JPLFileFromStreamTests.cpp  JPLM4DTransformModeLightFieldDecoderTests.cpp
source/Tests/Part2/Encoder/: CMakeLists.txt  JPLM4DTransformModeLightFieldEncoderTests.cpp  JPLMLightFieldEncoder4DTransformModeTests.cpp  JpegPlenoLightFieldEncoder4DTransformModeTests.cpp
source/Tests/Utils/Image/: CMakeLists.txt  ColorModelUtilsTests.cpp  ColorSpacesTests.cpp  ImageChannelTests.cpp  ImageColorSpacesConversorTests.cpp  ImageIOTests.cpp  ImageMetricTests.cpp  ImageTests.cpp  ImageUtilsTests.cpp  MetricsTests.cpp  PGXFileIOTests.cpp  PGXFileTests.cpp  PPMBinaryFileImageTests.cpp  PPMBinaryFileTests.cpp  PixelMapFileIOTests.cpp  Raster2DIteratorTests.cpp
(+601 files in other folders)
