add_executable(lenslet_13x13_shifter Lenslet13x13Shifter.cpp)
target_link_libraries(lenslet_13x13_shifter image)

add_executable(compute_psnr ComputePSNR.cpp)
target_link_libraries(compute_psnr image)

if(VISUALIZATION_TOOL)
	add_executable(lightfield_visualizer LightfieldVisualization.cpp)
	target_link_libraries(lightfield_visualizer image)
	target_link_libraries(lightfield_visualizer jplm_part2_common)
	target_link_libraries(lightfield_visualizer X11)
endif(VISUALIZATION_TOOL)


add_executable(compute_lightfield_psnr_from_ppm ComputeLightFieldPSNRFromPPM.cpp)
target_link_libraries(compute_lightfield_psnr_from_ppm image)
target_link_libraries(compute_lightfield_psnr_from_ppm jplm_part2_common)