function(add_jplm_part1_common_lib_test TEST_NAME TEST_BIN_NAME TEST_SOURCE)
	add_executable(${TEST_BIN_NAME} ${TEST_SOURCE})
	target_link_libraries(${TEST_BIN_NAME} PRIVATE gtest_main)
	target_link_libraries(${TEST_BIN_NAME} PRIVATE jplm_part1_common)
	add_test(${TEST_NAME} ${EXECUTABLE_OUTPUT_PATH}/${TEST_BIN_NAME} "${CMAKE_HOME_DIRECTORY}/resources")
endfunction()

add_jplm_part1_common_lib_test(BoxTests box_tests BoxTests.cpp)
add_jplm_part1_common_lib_test(BoxDataHolderTests boxdataholder_tests BoxDataHolderTests.cpp)
add_jplm_part1_common_lib_test(JpegPlenoSignatureBoxTests JpegPlenoSignatureBox_tests JpegPlenoSignatureBoxTests.cpp)
add_jplm_part1_common_lib_test(FileTypeBoxTests FileTypeBox_tests FileTypeBoxTests.cpp)
# add_jplm_part1_common_lib_test(JpegPlenoHeaderBoxTests JpegPlenoHeaderBox_tests JpegPlenoHeaderBoxTests.cpp)
add_jplm_part1_common_lib_test(JpegPlenoFileTypeContentsTests JpegPlenoFileTypeContents_tests JpegPlenoFileTypeContentsTests.cpp)
add_jplm_part1_common_lib_test(UniversalUniqueIdentifierTests UniversalUniqueIdentifier_tests UniversalUniqueIdentifierTests.cpp)
add_jplm_part1_common_lib_test(UUIDBoxTests UUIDBox_tests UUIDBoxTests.cpp)
add_jplm_part1_common_lib_test(LBoxTests lbox_tests LBoxTests.cpp)
add_jplm_part1_common_lib_test(TBoxTests tbox_tests TBoxTests.cpp)
add_jplm_part1_common_lib_test(XLBoxTests xlbox_tests XLBoxTests.cpp)
add_jplm_part1_common_lib_test(DBoxTests dbox_tests DBoxTests.cpp)
add_jplm_part1_common_lib_test(BinaryToolsTests binary_tools_tests BinaryToolsTests.cpp)
add_jplm_part1_common_lib_test(UnkownBoxInterpreterTests unknown_box_interpreter_tests UnkownBoxInterpreterTests.cpp)
add_jplm_part1_common_lib_test(ImageHeaderContentsTests image_header_contents_tests ImageHeaderContentsTests.cpp)
add_jplm_part1_common_lib_test(ImageHeaderBoxTests image_header_box_tests ImageHeaderBoxTests.cpp)
add_jplm_part1_common_lib_test(JPLFileTests jpl_file_tests JPLFileTests.cpp)
