function(add_jplm_part1_common_lib_test TEST_NAME TEST_BIN_NAME TEST_SOURCE)
	add_executable(${TEST_BIN_NAME} ${TEST_SOURCE})
	target_link_libraries(${TEST_BIN_NAME} PRIVATE gtest_main)
	target_link_libraries(${TEST_BIN_NAME} PRIVATE jplm_part1_common)
	add_test(${TEST_NAME} ${EXECUTABLE_OUTPUT_PATH}/${TEST_BIN_NAME} "${CMAKE_HOME_DIRECTORY}/resources")
endfunction()

add_jplm_part1_common_lib_test(BoxTests box_tests ../../Common/Boxes/BoxTests.cpp)
add_jplm_part1_common_lib_test(BoxDataHolderTests boxdataholder_tests ../../Common/Boxes/BoxDataHolderTests.cpp)
add_jplm_part1_common_lib_test(JpegPlenoSignatureBoxTests JpegPlenoSignatureBox_tests Boxes/JpegPlenoSignatureBoxTests.cpp)
add_jplm_part1_common_lib_test(FileTypeBoxTests FileTypeBox_tests Boxes/FileTypeBoxTests.cpp)
add_jplm_part1_common_lib_test(JpegPlenoFileTypeContentsTests JpegPlenoFileTypeContents_tests Boxes/JpegPlenoFileTypeContentsTests.cpp)
add_jplm_part1_common_lib_test(UniversalUniqueIdentifierTests UniversalUniqueIdentifier_tests ../../Common/Boxes/Generic/UniversalUniqueIdentifierTests.cpp)
add_jplm_part1_common_lib_test(UUIDBoxTests UUIDBox_tests ../../Common/Boxes/Generic/UUIDBoxTests.cpp)
add_jplm_part1_common_lib_test(LBoxTests lbox_tests ../../Common/Boxes/LBoxTests.cpp)
add_jplm_part1_common_lib_test(TBoxTests tbox_tests ../../Common/Boxes/TBoxTests.cpp)
add_jplm_part1_common_lib_test(XLBoxTests xlbox_tests ../../Common/Boxes/Generic/XLBoxTests.cpp)
add_jplm_part1_common_lib_test(DBoxTests dbox_tests ../../Common/Boxes/DBoxTests.cpp)
add_jplm_part1_common_lib_test(BinaryToolsTests binary_tools_tests BinaryToolsTests.cpp)
add_jplm_part1_common_lib_test(UnkownBoxInterpreterTests unknown_box_interpreter_tests ../../Common/Boxes/Generic/UnkownBoxInterpreterTests.cpp)
add_jplm_part1_common_lib_test(ImageHeaderContentsTests image_header_contents_tests ../../Common/Boxes/Generic/ImageHeaderContentsTests.cpp)
add_jplm_part1_common_lib_test(ImageHeaderBoxTests image_header_box_tests ../../Common/Boxes/Generic/ImageHeaderBoxTests.cpp)
add_jplm_part1_common_lib_test(JPLFileTests jpl_file_tests JPLFileTests.cpp)
