function(add_jplm_part2_common_lib_test TEST_NAME TEST_BIN_NAME TEST_SOURCE)
	add_executable(${TEST_BIN_NAME} ${TEST_SOURCE})
	target_link_libraries(${TEST_BIN_NAME} PRIVATE gtest_main)
	target_link_libraries(${TEST_BIN_NAME} PRIVATE jplm_part2_common)
	target_link_libraries(${TEST_BIN_NAME} PRIVATE image)
	add_test(${TEST_NAME} ${EXECUTABLE_OUTPUT_PATH}/${TEST_BIN_NAME} "${CMAKE_HOME_DIRECTORY}/resources")
endfunction()

add_jplm_part2_common_lib_test(ViewTests view_tests ViewTests.cpp)
add_jplm_part2_common_lib_test(ViewFromPPMFileTests view_from_ppm_file_tests ViewFromPPMFileTests.cpp)
add_jplm_part2_common_lib_test(LightfieldCoordinateTests lightfield_coordinate_tests LightfieldCoordinateTests.cpp)
add_jplm_part2_common_lib_test(LightfieldDimensionTests lightfield_dimension_tests LightfieldDimensionTests.cpp)
add_jplm_part2_common_lib_test(LightfieldTests lightfield_tests LightfieldTests.cpp)
add_jplm_part2_common_lib_test(LightfieldIOConfigurationTests lightfield_io_configuration_tests LightfieldIOConfigurationTests.cpp)
add_jplm_part2_common_lib_test(LightfieldFromPPMFileTests lightfield_from_ppm_file_tests LightfieldFromPPMFileTests.cpp)
add_jplm_part2_common_lib_test(ViewToFilenameTranslatorTests view_to_filename_translator_tests ViewToFilenameTranslatorTests.cpp)