function(add_image_lib_test TEST_NAME TEST_BIN_NAME TEST_SOURCE)
	add_executable(${TEST_BIN_NAME} ${TEST_SOURCE})
	target_link_libraries(${TEST_BIN_NAME} PRIVATE gtest_main)
	target_link_libraries(${TEST_BIN_NAME} PRIVATE image)
	add_test(${TEST_NAME} ${EXECUTABLE_OUTPUT_PATH}/${TEST_BIN_NAME})
endfunction()

add_image_lib_test(Metrics metrics_tests MetricsTests.cpp)
add_image_lib_test(ImageChannel image_channel_tests ImageChannelTests.cpp)
add_image_lib_test(Image image_tests ImageTests.cpp)
add_image_lib_test(ColorSpace color_space_tests ColorSpacesTests.cpp)