function(add_image_lib_test TEST_NAME TEST_BIN_NAME TEST_SOURCE)
	add_executable(${TEST_BIN_NAME} ${TEST_SOURCE})
	target_link_libraries(${TEST_BIN_NAME} PRIVATE gtest_main)
	target_link_libraries(${TEST_BIN_NAME} PRIVATE image)
	add_test(${TEST_NAME} ${EXECUTABLE_OUTPUT_PATH}/${TEST_BIN_NAME} "${CMAKE_HOME_DIRECTORY}/resources")
endfunction()

add_image_lib_test(Metrics metrics_tests MetricsTests.cpp)
add_image_lib_test(ImageChannel image_channel_tests ImageChannelTests.cpp)
add_image_lib_test(Image image_tests ImageTests.cpp)
# add_image_lib_test(ColorSpace color_space_tests ColorSpacesTests.cpp)
add_image_lib_test(ColorModelUtils color_model_utils_tests ColorModelUtilsTests.cpp)
add_image_lib_test(ImageColorSpacesConversor image_color_spaces_conversor_tests ImageColorSpacesConversorTests.cpp)
add_image_lib_test(ImageMetric image_metrics_tests ImageMetricTests.cpp)
add_image_lib_test(PixelMapFileIO pixelmap_file_io_tests PixelMapFileIOTests.cpp)
add_image_lib_test(ImageIO image_io_tests ImageIOTests.cpp)
add_image_lib_test(PPMBinaryFile ppm_binary_file_tests PPMBinaryFileTests.cpp)
add_image_lib_test(PPMBinaryFileImage ppm_binary_file_image_tests PPMBinaryFileImageTests.cpp)
add_image_lib_test(Raster2DIterator raster_2d_iterator_tests Raster2DIteratorTests.cpp)
add_image_lib_test(ImageUtils image_utils_tests ImageUtilsTests.cpp)
add_image_lib_test(PGXFile pgx_file_tests PGXFileTests.cpp)
add_image_lib_test(PGXFileIO pgx_file_io_tests PGXFileIOTests.cpp)